--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -18,11 +18,11 @@
 
     &-img {
       max-width: 100%;
-      height: auto;
+      height: 200px;
     }
 
     &-name {
-      font-size: 14px;
+      font-size: 24px;
       line-height: 1.5;
       height: 3em;
       overflow: hidden;
