--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,8 +1,14 @@
 .plays {
   &-title {
+    display: flex;
+    justify-content: space-between;
     font-size: 28px;
     margin: 30px 30px 0;
     color: #999;
+
+    .more {
+      font-size: 24px;
+    }
   }
 
   &-content {
@@ -28,4 +34,24 @@
       overflow: hidden;
     }
   }
+
+  .song-name {
+    height: 1.5em;
+    text-align: center;
+  }
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  margin: 0 20px;
+  padding: 0 30px;
+  font-size: 28px;
+  border: 1px solid #e8e8e8;
+
+  &-inp {
+    flex: 1;
+    height: 70px;
+  }
+
 }
