--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,57 +1,66 @@
-.plays {
-  &-title {
+
+.index {
+  .plays {
+    &-title {
+      display: flex;
+      justify-content: space-between;
+      font-size: 28px;
+      margin: 30px 30px 0;
+      color: #999;
+
+      .more {
+        font-size: 24px;
+      }
+    }
+
+    &-content {
+      display: flex;
+      padding: 25px;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+
+    .item {
+      width: 30%;
+      margin-bottom: 30px;
+
+      &-img {
+        max-width: 100%;
+        height: 200px;
+      }
+
+      &-name {
+        font-size: 24px;
+        line-height: 1.5;
+        height: 3em;
+        overflow: hidden;
+      }
+    }
+
+    .song-name {
+      height: 1.5em;
+      text-align: center;
+    }
+  }
+
+  .search {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    margin: 30px;
+    padding: 0 30px;
     font-size: 28px;
-    margin: 30px 30px 0;
-    color: #999;
+    border: 1px solid #e8e8e8;
 
-    .more {
-      font-size: 24px;
-    }
-  }
-
-  &-content {
-    display: flex;
-    padding: 25px;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-
-  .item {
-    width: 30%;
-    margin-bottom: 30px;
-
-    &-img {
-      max-width: 100%;
-      height: 200px;
+    &-inp {
+      flex: 1;
+      height: 70px;
     }
 
-    &-name {
-      font-size: 24px;
-      line-height: 1.5;
-      height: 3em;
-      overflow: hidden;
+  }
+
+  .banner {
+    &-item {
+      width: 100%;
     }
   }
-
-  .song-name {
-    height: 1.5em;
-    text-align: center;
-  }
-}
-
-.search {
-  display: flex;
-  align-items: center;
-  margin: 0 20px;
-  padding: 0 30px;
-  font-size: 28px;
-  border: 1px solid #e8e8e8;
-
-  &-inp {
-    flex: 1;
-    height: 70px;
-  }
-
 }
