--- a/src/pages/playListDetail/index.scss
+++ b/src/pages/playListDetail/index.scss
@@ -72,7 +72,8 @@
       &-index {
         margin-right: 20px;
         display: block;
-        padding: 0 10px;
+        width: 40px;
+        text-align: center;
         color: #999;
       }
 
