--- a/src/pages/search/index.scss
+++ b/src/pages/search/index.scss
@@ -52,3 +52,17 @@
     }
   }
 }
+
+.hot-search {
+  padding: 30px;
+  font-size: 24px;
+  text-align: center;
+  &-txt {
+    display: inline-block;
+    padding: 5px 15px;
+    margin: 10px;
+    color: #999;
+    border: 2px solid #ccc;
+    border-radius: 20px;
+  }
+}
